--- a/module5/applications/Jenkinsfile
+++ b/module5/applications/Jenkinsfile
@@ -20,7 +20,7 @@ pipeline {
         stage('ApplicationInit'){
             steps {
                 dir('module5/applications/'){
-                    sh "terraform init -input=false \
+                    sh "terraform init -input=false -reconfigure -plugin-dir=/var/jenkins_home/terraform_plugins \
                      --backend-config='dynamodb_table=$DYNAMODB_STATELOCK' --backend-config='bucket=$APPLICATION_BUCKET' \
                      --backend-config='access_key=$APPLICATION_ACCESS_KEY' --backend-config='secret_key=$APPLICATION_SECRET_KEY'"
                     sh "echo \$PWD"
